modified github link

--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+
     <h1 id="judul">Nama: Nabil Gathfan Putra M.</h1>
     <p>Deskripsi: Mahasiswa Teknik Informatika Politeknik Negeri Lhokseumawe.</p>
     <a href="https:/github.com/gathfam" target="_blank">Github</a>
 
     <h1>Berikut teman-teman saya di kelas: </h1>
     <ul>
-        <li>Shaista Ifra Zia Rosant</li>
-        <li><a href="https:/github.com/shaistaifra" target="_blank">Github</a></li>
+        <li><a href="https:/github.com/shaistaifra" target="_blank">Shaista Ifra Zia Rosant</a></li>
+        
+        <li><a href="https:/github.com/safiraaaaia" target="_blank">Safira Munita</a></li>
 
-        <li>Safira Munita</li>
-        <li><a href="https:/github.com/safiraaaaia" target="_blank">Github</a></li>
-
-        <li>Raja Maulidinsyah Putra</li>
-        <li><a href="https:/github.com/rajamaulidin" target="_blank">Github</a></li>
+        <li><a href="https:/github.com/rajamaulidin" target="_blank">Raja Maulidinsyah Putra</a></li>
 
     </ul>
 </body>
